--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.connection.ssl=${SPRING_DATASOURCE_SSL}
 spring.jpa.properties.hibernate.connection.sslmode=${SPRING_DATASOURCE_SSLMODE}
 
 # JPA
-spring.jpa.hibernate.ddl-auto=drop
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.data.web.pageable.one-indexed-parameters=true
