--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,6 +51,7 @@ spring.servlet.multipart.enabled=true
 
 # MinIO
 minio.endpoint=${MINIO_ENDPOINT}
+minio.public-endpoint=${MINIO_PUBLIC_ENDPOINT:http://minio:9000}
 minio.access-key=${MINIO_ACCESS_KEY}
 minio.secret-key=${MINIO_SECRET_KEY}
 minio.bucket-name=${MINIO_BUCKET_NAME}
