--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - .env
     environment:
       POSTGRES_DB: innovation_management
-      POSTGRES_USER: ${SPRING_DATASOURCE_USERNAME}
+      POSTGRES_USER: ${SPRING_DATASOURCE_USERNAME}  # user từ .env
       POSTGRES_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=C"
       TZ: Asia/Ho_Chi_Minh
@@ -20,10 +20,11 @@ services:
       - ./init-scripts:/docker-entrypoint-initdb.d
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U ${SPRING_DATASOURCE_USERNAME} -d innovation_management" ]
+      test: ["CMD-SHELL", "pg_isready -U ${SPRING_DATASOURCE_USERNAME} -d innovation_management"]
       interval: 10s
       timeout: 5s
       retries: 5
+
 
   # Redis Cache
   redis:
