--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,18 @@
 			<version>1.78.1</version>
 		</dependency>
 
+		<!-- Apache POI - Excel file processing -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
