Update Rate Limiting for API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,3 +86,8 @@ certificate.validation.check-revocation=false
 # Digital Signature Configuration
 digital.signature.algorithm=SHA256withRSA
 digital.signature.key.size=2048
+
+# Rate Limiting Configuration - 100 Requests/60s
+rate-limit.enabled=true
+rate-limit.requests-per-window=100
+rate-limit.window-duration-seconds=60
