--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -91,3 +91,7 @@ digital.signature.key.size=2048
 rate-limit.enabled=true
 rate-limit.requests-per-window=100
 rate-limit.window-duration-seconds=60
+
+# Gemini AI Configuration
+gemini.api.key=${GEMINI_API_KEY}
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
