--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -92,6 +92,6 @@ rate-limit.enabled=true
 rate-limit.requests-per-window=500
 rate-limit.window-duration-seconds=60
 
-# Gemini AI Configuration
-gemini.api.key=${GEMINI_API_KEY}
-gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
+# Ollama AI Configuration (Local)
+ollama.api.url=${OLLAMA_API_URL:http://ollama:11434/api/generate}
+ollama.model=${OLLAMA_MODEL:qwen2.5:3b}
