Update check Similar Innovation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -95,3 +95,7 @@ rate-limit.window-duration-seconds=60
 # Ollama AI Configuration (Local)
 ollama.api.url=${OLLAMA_API_URL:http://ollama:11434/api/generate}
 ollama.model=${OLLAMA_MODEL:qwen2.5:1.5b}
+
+# Innovation Similarity Configuration
+innovation.similarity.threshold=0.3
+innovation.similarity.max-results=10
