--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -95,3 +95,8 @@ rate-limit.window-duration-seconds=60
 # Ollama AI Configuration (Local)
 ollama.api.url=${OLLAMA_API_URL:http://ollama:11434/api/generate}
 ollama.model=${OLLAMA_MODEL:qwen2.5:1.5b}
+
+# AI Embedding Service Configuration
+ai.service.url=${AI_SERVICE_URL:http://ai-embedding-service:8000}
+innovation.duplicate.threshold=0.70
+innovation.embedding.metadata-table-threshold=0.5
