--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,28 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Testcontainers - Docker containers for Integration Tests -->
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>minio</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 		<!-- ===== API DOCUMENTATION ===== -->
 
 		<!-- SpringDoc OpenAPI - Swagger UI & OpenAPI 3 documentation -->
