--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.connection.ssl=${SPRING_DATASOURCE_SSL}
 spring.jpa.properties.hibernate.connection.sslmode=${SPRING_DATASOURCE_SSLMODE}
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=drop
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.data.web.pageable.one-indexed-parameters=true
@@ -78,15 +78,6 @@ management.endpoint.health.show-details=always
 # HSM Encryption Configuration (Academic Project)
 hsm.master.key=${HSM_MASTER_KEY}
 
-# Certificate Validation Configuration
-certificate.validation.enabled=true
-certificate.validation.check-expiration=true
-certificate.validation.check-revocation=false
-
-# Digital Signature Configuration
-digital.signature.algorithm=SHA256withRSA
-digital.signature.key.size=2048
-
 # Rate Limiting Configuration - 100 Requests/60s
 rate-limit.enabled=true
 rate-limit.requests-per-window=500
@@ -94,7 +85,7 @@ rate-limit.window-duration-seconds=60
 
 # Ollama AI Configuration (Local)
 ollama.api.url=${OLLAMA_API_URL:http://ollama:11434/api/generate}
-ollama.model=${OLLAMA_MODEL:qwen2.5:1.5b}
+ollama.model=${OLLAMA_MODEL:llama3.2:3b}
 
 # AI Embedding Service Configuration
 ai.service.url=${AI_SERVICE_URL:http://ai-embedding-service:8000}
