feat: add AiAnalysisCacheService for Redis caching of AI analysis result

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -95,3 +95,6 @@ innovation.embedding.metadata-table-threshold=0.5
 # Innovation Similarity Configuration
 innovation.similarity.threshold=0.3
 innovation.similarity.max-results=10
+
+# AI Analysis Cache Configuration
+ai.analysis.cache.ttl=${AI_ANALYSIS_CACHE_TTL:86400}
